// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFactory rendering renders AutoComplete 1`] = `
<FormControl
  bsClass="form-control"
  className=""
  componentClass={
    Object {
      "$$typeof": Symbol(react.memo),
      "Error": [Function],
      "SearchButton": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(AutoComplete)",
      "type": [Function],
    }
  }
  controller="bookmarks"
  disabled={false}
  id="form-search"
  name="Filter[search]"
  onChange={[Function]}
  required={false}
  searchQuery=""
  url="bookmarks/auto_complete"
  useKeyShortcuts={false}
/>
`;

exports[`InputFactory rendering renders DateTime input 1`] = `
<FormControl
  bsClass="form-control"
  className=""
  componentClass={[Function]}
  disabled={false}
  name="a"
  onChange={[Function]}
  required={false}
/>
`;

exports[`InputFactory rendering renders custom registered component 1`] = `
<FormControl
  bsClass="form-control"
  className=""
  componentClass={[Function]}
  disabled={false}
  id="own-field"
  label="ownField"
  name="group[ownfield]"
  onChange={[Function]}
  required={false}
/>
`;

exports[`InputFactory rendering renders text input 1`] = `
<FormControl
  bsClass="form-control"
  className=""
  componentClass="input"
  disabled={false}
  name="a"
  onChange={[Function]}
  required={false}
  type="text"
/>
`;
